Redis base and compose
